Bug 2007013 - Consolidate ktlint configuration into `ProjectPlugin` r=nalexander,android-reviewers,geckoview-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D277096

UltraBlame original commit: da7bcd9e9af22a173ac9e1331d4bd5927023db07